finished layout, started script

--- a/index.html
+++ b/index.html
@@ -5,42 +5,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./images/logo1.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Tinos:400,400i,700,700i&display=swap&subset=hebrew" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tinos:400,400i,700,700i&display=swap&subset=hebrew"
+        rel="stylesheet">
     <title>Memory cards</title>
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-lg rounded shadow p-3">
-            <img src="./images/logo1.png" class="logo align-top" alt="logo">
-            <a class="navbar-brand" href="./index.html">Memory Cards</a>
-            <p class="navtext">a memory game.</p>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Dropdown link
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
-                              <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                    </div>
-                <div class="navbar-nav">
-                    <a href="./index.html"><button type="button" class="btn"
-                            id="start!">Start!</button></a>
+    <nav class="navbar navbar-expand-lg rounded shadow p-3">
+        <img src="./images/logo1.png" class="logo" alt="logo">
+        <div class="navbar-title">
+                <a class="navbar-brand" href="./index.html">Memory Cards</a>
+                <p  class="navbar-slogen">a memory game.</p>
+        </div>
+        
+        <div class="nav-item dropdown dropleft">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">New Game</a>
+                    <a class="dropdown-item" href="#">Scores</a>
+                    <a class="dropdown-item" href="#">About</a>
                 </div>
             </div>
-        </nav>
-        <div class="container-fluid rounded shadow p-3">
-            <div class="row header"></div>
-            <div class="row main"></div>
-            
+
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a href="./index.html"><button type="button" class="btn" id="start!">Start!</button></a>
+            </div>
+        </div>
+    </nav>
+    <div class="container rounded shadow p-3">
+        <div class="row cards-container">
+            <div class="card" id="card1">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card2">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card3">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card4">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card5">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card6">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card7">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card8">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card9">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card10">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card11">
+                <img class="card-img-top">
+            </div>
+            <div class="card" id="card12">
+                <img class="card-img-top">
+            </div>
+
 
 
         </div>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
