--- a/index.html
+++ b/index.html
@@ -40,22 +40,34 @@
     </nav>
 
 
-    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="ModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="ModalLabel">New Game</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <form>
+                        <div class="form-group">
+                            <label for="playerNameInput" class="col-form-label">Player Name:</label>
+                            <input type="text" class="form-control" id="playerNameInput">
+                        </div>
+                        <div class="form-group">
+                            <select class="custom-select" id="deckInput">
+                                <option selected>Deck</option>
+                                <option value="Dogs">Dogs</option>
+                                <option value="Cats">Cats</option>
+                                <option value="Suprise">Suprise me</option>
+                            </select>
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary" id="modalStartBtn">Start game</button>
                 </div>
             </div>
         </div>
