added deck files - card images

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                                 <option selected>Deck</option>
                                 <option value="Dogs">Dogs</option>
                                 <option value="Cats">Cats</option>
-                                <option value="Suprise">Suprise me</option>
+                                <option value="Cats">Birds</option>
+                                <option value="Surprise">Surprise me</option>
                             </select>
                         </div>
                     </form>
