a player can log in/ sign in now (local only)

--- a/index.html
+++ b/index.html
@@ -50,21 +50,19 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="playerNameInput" class="col-form-label">Player Name:</label>
-                            <input type="text" class="form-control" id="playerNameInput">
-                        </div>
-                        <div class="form-group">
-                            <select class="custom-select" id="deckInput">
-                                <option selected>Deck</option>
-                                <option value="Dogs">Dogs</option>
-                                <option value="Cats">Cats</option>
-                                <option value="Cats">Birds</option>
-                                <option value="Surprise">Surprise me</option>
-                            </select>
-                        </div>
-                    </form>
+                    <div class="form-group">
+                        <label for="playerNameInput" class="col-form-label">Player Name:</label>
+                        <input type="text" class="form-control" id="playerNameInput">
+                    </div>
+                    <div class="form-group">
+                        <select class="custom-select" id="deckInput">
+                            <option selected>Deck</option>
+                            <option value="Dogs">Dogs</option>
+                            <option value="Cats">Cats</option>
+                            <option value="Cats">Birds</option>
+                            <option value="Surprise">Surprise me</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -130,10 +128,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <!-- <script src="./Scripts/Elements/Card.js"></script>
+    <script src="./Scripts/Elements/Card.js"></script>
     <script src="./Scripts/Elements/Player.js"></script>
     <script src="./Scripts/Elements/Game.js"></script>
-    <script src="./Scripts/Main.js"></script> -->
+    <script src="./Scripts/Main.js"></script>
 </body>
 
 </html>
