--- a/index.html
+++ b/index.html
@@ -7,36 +7,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+
     <link rel="shortcut icon" href="./images/logo1.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Tinos:400,400i,700,700i&display=swap&subset=hebrew"
         rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Memory cards</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg rounded shadow p-3">
-        <img src="./images/logo1.png" class="logo" alt="logo">
-        <div class="navbar-title">
-            <a class="navbar-brand" href="./index.html">Memory Cards</a>
-            <p class="navbar-slogen">a memory game.</p>
+    <nav class="navbar rounded shadow p-3">
+        <div class="nav-left">
+            <img src="./images/logo1.png" class="logo" alt="logo">
+            <div class="navbar-title">
+                <a class="navbar-brand" href="./index.html">Memory Cards</a>
+                <p class="navbar-slogen">a memory game.</p>
+            </div>
         </div>
 
-        <div class="nav-item dropdown dropleft">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <button type="button" class="btn" data-toggle="modal" data-target="#Modal">New Game</button>
-                <a class="dropdown-item" href="#">Scores</a>
-                <a class="dropdown-item" href="#">About</a>
-            </div>
-        </div>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <button type="button" class="btn" id="start!" data-toggle="modal" data-target="#Modal">Start!</button>
-            </div>
-        </div>
+        <button type="button" class="btn" id="start" data-toggle="modal" data-target="#Modal">Start!</button>
     </nav>
 
 
@@ -60,11 +49,9 @@
                                 <label class="input-group-text" for="deckInput">Deck</label>
                             </div>
                             <select class="custom-select" id="deckInput">
-                                <option selected>Deck</option>
-                                <option value="Dogs">Dogs</option>
+                                <option value="Dogs" selected>Dogs</option>
                                 <option value="Cats">Cats</option>
                                 <option value="Cats">Birds</option>
-                                <option value="Surprise">Surprise me</option>
                             </select>
                         </div>
 
@@ -79,10 +66,8 @@
         </div>
     </div>
 
-
-    <div class="container rounded shadow p-3">
+    <div class="container rounded shadow p-3" id="container">
         <div class="row cards-container" id="cardsContainer">
-
         </div>
     </div>
 
