fix images path bug. /path (workes only in live server) -> ./path

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <select class="custom-select" id="deckInput">
                                 <option value="Dogs" selected>Dogs</option>
                                 <option value="Cats">Cats</option>
-                                <option value="Cats">Birds</option>
+                                <option value="Birds">Birds</option>
                             </select>
                         </div>
 
@@ -90,42 +90,3 @@
 </body>
 
 </html>
-
-<!--  <div class="card" id="card1">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card2">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card3">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card4">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card5">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card6">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card7">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card8">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card9">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card10">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card11">
-                <img class="card-img-top">
-            </div>
-            <div class="card" id="card12">
-                <img class="card-img-top">
-            </div>
-
- -->
